DHFPROD-5324: Fix the issue where grey background and border for entity/hub properties panel are not uniform
DHFPROD-5324: Fixing the height of side bar in explorer (+1 squashed commit)
Squashed commits:
[2704fc0cb] DHFPROD-5324: Fix the issue where grey background and border for entity/hub properties panel are not uniform

--- a/marklogic-data-hub-central/ui/src/components/facet/facet.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/facet/facet.module.scss
@@ -9,6 +9,7 @@
 
   .name {
     font-size: 15px;
+    color: #777777;
     font-weight: bold;
     text-overflow: ellipsis;
     overflow: hidden;
